--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "firebase-admin": "^5.11.0",
     "firebase-admin-util": "^4.1.0",
     "moment": "^2.20.1",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "nodemailer": "^4.6.4",
+    "pdfkit": "^0.8.3",
+    "sanitize-filename": "^1.6.1"
   }
 }
