--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "moment": "^2.20.1",
     "multer": "^1.3.0",
     "nodemailer": "^4.6.4",
-    "pdfkit": "^0.8.3",
-    "sanitize-filename": "^1.6.1"
+    "pdfkit": "^0.8.3"
   }
 }
